adjust colors and add links

--- a/src/app/_markdown/dresscode.mdx
+++ b/src/app/_markdown/dresscode.mdx
@@ -4,4 +4,4 @@ Klädkod för fredag är late summer cocktail. Vi tänker snyggt, elegant och se
 
 Klädkod för lördagen är smoking. Har du ingen smoking? Inga problem - nedan hittar du förslag på ställen som hyr ut smoking. Skulle du mot förmodan inte vilja ha på dig en smoking är du självklart välkommen med svart kostym, det viktigaste för oss är att ni kommer.
 
-[Oscar Jacobsson](google.com) | [Tiger](google.com) | [Nånting](google.com)
+[manbergbagge.se](https://www.manbergbagge.se/hyrasmoking) | [hansallde.com](https://hansallde.com/smoking/) | [grosshandlarn.se](https://www.grosshandlarn.se/uthyrning-frack-smoking) | [benjaminsthlm.com](https://www.benjaminsthlm.com/uthyrning) | [hyrasmokingstockholm.se](https://www.hyrasmokingstockholm.se/hyra-smoking) | [bisseofsweden.se](https://www.bisseofsweden.se/smoking-och-frack)
