add love story tab

--- a/src/app/_markdown/saturday.mdx
+++ b/src/app/_markdown/saturday.mdx
@@ -7,7 +7,7 @@ Vi börjar vår stora dag med vigsel i [Djursholms kapell](https://www.google.se
 Efter ceremonin beger vi oss till Djursholms slott för middag och fest. Vi tar en härlig 15-minuters promenad tillsammans från kapellet till slottet. För er som behöver skjuts kommer det finnas biltransport som alternativ.
 
 **Mingel och middag**<br/>
-På slottet börjar vi med mingel där vi bjuder på drinkar och tilltugg. Därefter går vi in för att avnjuta en härlig middag tillsammans.
+På slottet börjar vi med mingel där vi bjuder på bubbel och tilltugg utomhus på den vackra slottsgården om vädret tillåter. Därefter går vi in för att avnjuta en härlig middag tillsammans.
 
 **Fest och dans**<br/>
 Efter middagen vill vi ha en riktigt rolig fest med er! Vi börjar med styrdans på dansgolvet de första 30 minuterna, så börja gärna öva på era bästa bugg- och foxtrotsteg. Alla måste dansa!
