--- a/src/app/_markdown/toastmadam.mdx
+++ b/src/app/_markdown/toastmadam.mdx
@@ -1,6 +1,6 @@
 **Tre fun facts om vår Toast-madam Amanda:**<br/>
 
-- **Isabelles storasyster:** Amanda är så mycket storasyster man kan bli. Kollar man upp storasyster i ordboken kommer Amanda upp som definition. Amanda har också under ca 6 år varit Isabelle och Johans tredje enhet - från att ha rest till Ronda: Spanien tillsammans till att ha varit buffer för att Isabelle och Johan inte ska börja bråka på Ikea.
+- **Isabelles storasyster:** Amanda är så mycket storasyster man kan bli. Kollar man upp storasyster i ordboken kommer Amanda upp som definition. Amanda har också under ca 6 år varit Isabelle och Johans tredje enhet - från att ha rest till Ronda: Spanien tillsammans till att ha varit buffert för att Isabelle och Johan inte ska börja bråka på Ikea.
 
 - **Festdrottningen Amanda:** Ingen har varit på fler efterfester än Amanda Bengtsson. Men det finns ingen som lika duktigt kan gå upp morgonen efter och se ut som om ingenting har hänt. Never too much daylight for this queen of the night!
 
