--- a/src/app/_markdown/toastmaster.mdx
+++ b/src/app/_markdown/toastmaster.mdx
@@ -4,4 +4,4 @@
 
 - **Nakenchocken:** När Alex var liten älskade han att springa runt naken, så mycket att Isabelle skrev en låt om det till hans student, där vi också avfärdade hans ökända smeknamn "44 slak" från gymnasiet. Något alla hans systrar vet var mer en önskedröm från Alex själv.
 
-- **Musik karriär:** Alex har nyligen lanserats i svensk muskk hostoria. Han är en DJ och producent. Gå gärna in och följ honom på Aplex sounds på instagram. Spread the love!
+- **Musikkarriär:** Alex har nyligen lanserats sig själv på den svenska musikscenen. Han är en DJ och producent. Gå gärna in och följ honom på Aplex sounds på instagram. Spread the love!
