--- a/src/app/_markdown/transport.mdx
+++ b/src/app/_markdown/transport.mdx
@@ -4,4 +4,4 @@
 Är du en miljöhjälte som Johan och åker kommunalt? Isf tar du dig lätt till Danderyds sjukhus med tunnelbanans röda linje eller buss och därifrån är det en ca 7 minuters promenad till Sturevägen 5 där pre-wedding party hålls på fredagen. Är du lite mer som Isabelle och tycker det låter fruktansvärt att åka kommunalt med klackar går också taxi utmärkt.
 
 **Lördagen:**<br/>
-Åker du kommunalt till lördagen kan du ta buss 601 från Danderyds sjukhus och gå av vid auravägen, eller 606 till Djursholms torg. Därifrån är det en 3 minuters promenad till kapellet. Det finns parkering vid kapellet för den som kör också. Tar du bilen kan du enkelt parkera bilen vid slottet vid senare fest.
+Åker du kommunalt till lördagen kan du ta buss 601 från Danderyds sjukhus och gå av vid Djursholms Sveavägen, eller 606 från Danderyds sjukhus till Djursholms torg. Därifrån är det en 3 minuters promenad till kapellet. Det finns parkering vid kapellet för den som kör också. Tar du bilen kan du enkelt parkera bilen vid slottet vid senare fest.
