--- a/src/app/_markdown/love-story.mdx
+++ b/src/app/_markdown/love-story.mdx
@@ -8,9 +8,9 @@ Bergsklättring i Ågelsjöns naturreservat där jag efter att vi kommit fram up
 
 Besök hos Isabelles mamma Annette och Lasse i Marbella med ”La Concha” som plafond, som vi tillsammans med syskonen vandrade upp för. Sommaren på franska rivieran i Cap d’Ail, där vägen ned till den magnifika stranden var en större utmaning än bestigningen av Kebnekaise, men det var det värt för att se strandens omgivande klipphällar som sluttade rakt ned i havet.
 
-Kusinträffen i Bådahällan med logdans, sik, ljusa nätter, bergsklättring i Starrberget och som vi avrundade med att fara vidare till Matsdal för några vadringsturer, där vi bland annat försökte sätta upp ett tält i spöregn och storm, som vi efter en timme packade ihop igen för att vandra tillbaka, då det visade sig att tältet läckte. Eller varför inte vandringen upp för Fulufjället för att se Sveriges högsta vattenfall och någon gammal gran som jag ville se, även kallad ”Old Tjikko”. Turen till vattenfallet gick bra, men strax innan halva vandringen upp för att se granen var skyfallet så kraftigt att man knappt såg en meter framför sig. Jag hade som mål att se granen och höll humöret på topp genom att med jämna mellanrum säga: ”vi är snart framme”. Efter 45 minuter när frasen hade yttrats 90 gånger kom vi tillslut fram, med skorna fyllda med vatten upp till anklarna, tog en bild och svor oss sedan ned för berget. Efter ett ombyte och 30 minuters färd i bilen kom vi skrattande överens om att vattenfallet var spektakulärt, men den där ”Tjikko” hade vi kunnat vara utan.
+Kusinträffen i Bådahällan med logdans, morfar Håkans sik, ljusa nätter, bergsklättring i Starrberget och som vi avrundade med att fara vidare till Matsdal för några vadringsturer, där vi bland annat försökte sätta upp ett tält i spöregn och storm, som vi efter en timme packade ihop igen för att vandra tillbaka, då det visade sig att tältet läckte. Eller varför inte vandringen upp för Fulufjället för att se Sveriges högsta vattenfall och någon gammal gran som jag ville se, även kallad ”Old Tjikko”. Turen till vattenfallet gick bra, men strax innan halva vandringen upp för att se granen var skyfallet så kraftigt att man knappt såg en meter framför sig. Jag hade som mål att se granen och höll humöret på topp genom att med jämna mellanrum säga: ”vi är snart framme”. Efter 45 minuter när frasen hade yttrats 90 gånger kom vi tillslut fram, med skorna fyllda med vatten upp till anklarna, tog en bild och svor oss sedan ned för berget. Efter ett ombyte och 30 minuters färd i bilen kom vi skrattande överens om att vattenfallet var spektakulärt, men den där ”Tjikko” hade vi kunnat vara utan.
 
-Det är dessa kontraster mellan bekvämlighet och utmaningar, den succesiva vandringen uppför och den glada resan hem som gör livet lustfyllt att leva.
+Det är dessa kontraster mellan bekvämlighet och utmaningar, den succesiva vandringen uppför och den glada resan hem som gör livet med Isabelle lustfyllt att leva.
 
 Vi gillar inte bara bergen på sommaren utan det har blivit många turer upp till fjällen för att åka skidor i Tandådalen och Björnrike tillsammans med familjen. En sådan resa upp till Björnrike var tillfället då jag friade till Isabelle i sällskap med Shakti och Freja, efter några ”snabba” samtal till Calle, Lasse och Annette, för att be om deras välsignelse.
 
